Closed Bug 724168 Opened 14 years ago Closed 14 years ago

IonMonkey: Invalidated IonScripts are not traced

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dvander, Assigned: dvander)

Details

Attachments

(1 file, 1 obsolete file)

We keep invalidated IonScripts alive, but don't trace them, which means their underlying code objects could be freed before we return. This is causing a crash in a long-running test case.
Attached patch fix (obsolete) — Splinter Review
Attachment #594371 - Flags: review?(christopher.leary)
Attached patch better fixSplinter Review
Attachment #594371 - Attachment is obsolete: true
Attachment #594371 - Flags: review?(christopher.leary)
Attachment #594372 - Flags: review?(christopher.leary)
Attachment #594372 - Flags: review?(christopher.leary) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: