Ensure that invalidated IonScripts are traced during GC, to keep IonCode objects alive (bug 724168, r=cdleary).